# cyclops

./: .pre-commit-config.yaml  README.md  pyproject.toml  vercel.json
.github/workflows/: publish.yml
cyclops/: __init__.py
cyclops/core/: __init__.py  agent.py  executor.py  hooks.py  memory.py  types.py
cyclops/mcp/: __init__.py  bridge.py  client.py  server.py  tools.py
cyclops/observability/: __init__.py  otel.py
cyclops/providers/: __init__.py  base.py  litellm_provider.py
cyclops/toolkit/: __init__.py  decorators.py  plugins.py  registry.py  tool.py  types.py
cyclops/utils/: __init__.py
docs/: api-reference.md  examples.md  getting-started.md  index.md
docs/guide/: agents.md  cost-tracking.md  hooks.md  mcp.md  memory.md  plugins.md  streaming.md  structured-output.md  tools.md
examples/: cost_tracking.py  hooks_example.py  mcp_bridge_example.py  multi_turn_agent.py  otel_example.py  plugin_system.py  router_fallback.py  router_load_balancing.py  streaming_example.py  structured_output.py  tool_loop_demo.py
tests/: test_agent.py  test_mcp_bridge.py  test_memory.py  test_tools.py
website/: astro.config.mjs  package-lock.json  package.json
website/public/: llms.txt
website/src/content/docs/: api-reference.md  getting-started.md  index.mdx
website/src/content/docs/guides/: agents.md  agents.mdx  cost-tracking.md  cost-tracking.mdx  hooks.md  hooks.mdx  mcp.md  mcp.mdx  memory.md  memory.mdx  observability.mdx  plugins.md  plugins.mdx  streaming.md  streaming.mdx  structured-output.md  structured-output.mdx  tools.md  tools.mdx
website/src/styles/: custom.css
