[project]
name = "cyclops"
version = "0.1.0"
description = "Core agent framework with MCP toolkit support"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.79.1",
    "pydantic>=2.10.0",
    "mcp>=1.20.0",
    "pluggy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."cyclops.toolkits"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
