[project]
name = "cyclops-ai"
version = "0.3.0"
description = "Core agent framework with MCP toolkit support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gopalji Gaur", email = "gopaljigaur@gmail.com"}
]
keywords = ["ai", "agents", "llm", "mcp", "litellm", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.83.7",
    "pydantic>=2.12.4",
    "mcp>=1.23.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/gopaljigaur/cyclops"
Repository = "https://github.com/gopaljigaur/cyclops"
Issues = "https://github.com/gopaljigaur/cyclops/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."cyclops.toolkits"]

[tool.hatch.build.targets.wheel]
packages = ["cyclops"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "black>=26.3.1",
    "ruff>=0.14.4",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
]
